<resources>
    <string name="app_name">Smash Up 1v1 Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="buttonDeletePlayer">Delete</string>
    <string name="buttonAddPlayer">Add</string>
    <string name="textViewManagePlayersHeader">Manage Players</string>
    <string name="textViewAddGameHeader">Add Game</string>
    <string name="buttonAddGame">Add</string>
    <string name="scoreHint">score</string>
    <string name="textViewPlayerOne">Player One</string>
    <string name="textViewPlayerTwo">Player Two</string>
    <string name="action_add_player">Add Player</string>
    <string name="action_manage_players">Manage Players</string>
    <string name="editTextPlayerNameHint">Name</string>
    <string name="tvVersus">vs</string>
    <string-array
        name="factions">
        <item>Aliens</item>
        <item>Dinosaurs</item>
        <item>Ninjas</item>
        <item>Pirates</item>
        <item>Robots</item>
        <item>Tricksters</item>
        <item>Wizards</item>
        <item>Zombies</item>
    </string-array>
</resources>
