<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewManagePlayersHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewManagePlayersHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <ListView
        android:id="@+id/listViewPlayers"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:choiceMode="singleChoice"
        android:clickable="false"></ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextPlayerNameHint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonAddPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonAddPlayer" />
    </LinearLayout>

</LinearLayout>